<resources>
    <string name="app_name">BaseDatosLibros</string>
    <string name="txt_codigo">codigo libro</string>
    <string name="txt_titulo">titulo libro</string>
    <string name="txt_autor">autor libro</string>
    <string name="txt_editorial">editorial libro</string>
    <string name="bt_registar">registrar libro</string>
    <string name="bt_buscar">buscar libro</string>
    <string name="bt_eliminar">eliminar libro</string>
    <string name="bt_modificar">modificar libro</string>
</resources>